<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".MainActivity" >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/hu_welcome_label"
        android:textColor="@color/white"
        android:textSize="@dimen/welcome_page_font_size" />

    <TextView
            android:id="@+id/textUserName"
            android:layout_below="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hu_login_username_label"
            android:textColor="@color/white"
            android:textSize="@dimen/welcome_page_font_size" />
    
    <EditText 
        android:id="@+id/editTextUserName"
        android:layout_below="@+id/textUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/white"
        android:layout_marginTop="-10dp"/>

    <TextView
            android:id="@+id/textPassword"
            android:layout_below="@+id/editTextUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hu_login_password_label"
            android:textColor="@color/white"
            android:textSize="@dimen/welcome_page_font_size" />

    <EditText 
        android:id="@+id/editTextPassword"
        android:layout_below="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:layout_marginTop="-10dp"/>
    
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:textColor="@color/white"
        android:text="@string/button_login_label"/>
    <TextView
            android:id="@+id/textLoginResult"
            android:layout_below="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/welcome_page_font_size" />
</RelativeLayout>
